[package]
name = "neuro_ftl"
version = "0.1.5"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ctor = "0.2.9"
libloading = "0.8.6"
retour = "0.3.1"
neuro-ftl-derive = { path = "./neuro-ftl-derive" }
neuro-sama = { version = "0.5.0-alpha.4" } # { path = "../neuro-sama" }
serde = "1.0.217"
schemars = "1.0.0-alpha"
indexmap = "2.7.0"
tokio = { version = "1.42.0", features = ["macros", "net", "rt", "sync", "time"] }
tungstenite = "0.26"
tokio-tungstenite = "0.26"
log = "0.4.22"
futures-util = "0.3.31"
env_logger = "0.11.6"
libc = "0.2.169"
serde_json = "1.0.134"
quick-xml = { version = "0.37.2", features = ["overlapped-lists", "serialize"] }
rand = "0.8.5"
# konigsberg = { git = "https://github.com/chayleaf/konigsberg.git", optional = true }
steamworks-sys = "0.11.0"

[features]
#default = ["konigsberg"]
